# vectordb

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Makefile  README.OBJECTIVE.md  README.md  check_bus.py  cloudbuild-search.yaml  cloudbuild-ui.yaml  cloudbuild-worker.yaml  cloudbuild.yaml  config.yaml  docker-compose.yml  pyproject.toml  test_embeddings.py
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/vdb_api/: __init__.py  main.py  worker.py
apps/api/src/vdb_api/application/: __init__.py
apps/api/src/vdb_api/infrastructure/: __init__.py
apps/api/src/vdb_api/presentation/: __init__.py  exception_handlers.py
apps/api/src/vdb_api/presentation/routers/: __init__.py  libraries.py
apps/api/src/vdb_api/presentation/schemas/: __init__.py  document_schemas.py  library_schemas.py
apps/api/tests/: test_api_integration.py
apps/api/tests/presentation/: test_exception_handlers.py
apps/sdk/: pyproject.toml
apps/sdk/src/vdb_sdk/: __init__.py
apps/search-service/: Dockerfile  README.md  pyproject.toml
apps/search-service/src/search_service/: __init__.py  api.py  main.py  vector_index.py
apps/ui/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/ui/app/: layout.tsx  page.tsx
apps/ui/app/api-docs/: page.tsx
apps/ui/app/configs/: page.tsx
apps/ui/app/database/: page.tsx
apps/ui/app/docs/: page.tsx
apps/ui/app/events/: page.tsx
apps/ui/app/libraries/: actions.ts  page.tsx
apps/ui/app/octant/: page.tsx
apps/ui/app/rabbitmq/: page.tsx
apps/ui/app/temporal/: page.tsx
apps/ui/components/documents/: documents-list.tsx  upload-document-dialog.tsx
apps/ui/components/events/: event-detail-modal.tsx  event-filters.tsx  event-log-viewer.tsx
apps/ui/components/layout/: app-layout.tsx  library-nav.tsx  sidebar-provider.tsx  sidebar.tsx
apps/ui/components/libraries/: create-library-dialog.tsx  create-library-form.test.tsx  create-library-form.tsx  delete-library-dialog.tsx  libraries-list.test.tsx  libraries-list.tsx
apps/ui/components/queries/: create-query-dialog.tsx  queries-list.tsx
apps/ui/hooks/: useQueryPolling.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/vdb_worker/: __init__.py  event_log_consumer.py  rabbitmq_consumer.py  search_worker.py  worker.py
deploy/kubernetes/: 00-namespace.yaml  01-configmap.yaml  02-secrets.yaml  03-config-file.yaml  10-storage-temporal-postgres.yaml  11-storage-app-postgres.yaml  12-storage-rabbitmq.yaml  20-temporal-postgres.yaml  21-app-postgres.yaml  22-rabbitmq.yaml  30-temporal.yaml  31-temporal-ui.yaml  40-api.yaml  41-worker.yaml  42-event-dispatcher.yaml  43-event-log-consumer.yaml  44-search.yaml  45-search-worker.yaml  50-ui.yaml  60-adminer.yaml  60-pgweb.yaml  70-ingress-gke.yaml
deploy/terraform/gcp/: outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
deploy/terraform/kubernetes/: main.tf  outputs.tf  variables.tf
scripts/: apply-migrations.sh  build-and-push.sh  cleanup-minikube.sh  deploy-minikube.sh  deploy-ui.sh  deploy.sh  fast-deploy.sh  init-db.sql  init-vector-tables.sql  reset-dev.sh  run-migrations.sql  schema.sql  setup-gcp-project.sh  start-dev.sh  stop-dev.sh  terminate-old-workflows.sh  wait-for-builds.sh
scripts/migrations/: 001_create_domain_tables.sql  002_create_strategy_tables.sql  003_create_event_logs_table.sql  004_refactor_vectorization_configs.sql  005_remove_library_id_from_strategies.sql  006_add_extracted_contents_columns.sql  007_create_queries_table.sql  008_create_embeddings_table.sql  009_allow_null_provider_in_embedding_strategies.sql  010_insert_default_vectorization_configs.sql  011_add_ivf_vectorization_config.sql  012_fix_embeddings_vector_to_jsonb.sql
temporal-config/: development-sql.yaml
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/gcp/: main.tf
terraform/modules/application/: main.tf  variables.tf
terraform/modules/gke/: main.tf  variables.tf
terraform/modules/postgres/: main.tf  variables.tf
terraform/modules/temporal/: main.tf  variables.tf
tests/e2e/: __init__.py  conftest.py  test_document_upload.py  test_library_management.py
(+24 files in other folders)
