[project]
name = "vdb-api"
version = "0.1.0"
description = "FastAPI REST API for vector database with kNN search"
requires-python = ">=3.12"
dependencies = [
    "vdb-core",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.12",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "cohere>=5.11.0",
    "numpy>=2.1.0",
]

[tool.uv.sources]
vdb-core = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "pytest-watch>=4.2.0",
]

[project.optional-dependencies]
temporal = ["temporalio>=1.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vdb_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
