[project]
name = "vdb-sdk"
version = "0.1.0"
description = "Python SDK client for VectorDB API"
requires-python = ">=3.13"
dependencies = [
    "vdb-core",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
]

[tool.uv.sources]
vdb-core = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vdb_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
