[project]
name = "vdb-search-service"
version = "0.1.0"
description = "Vector search service with in-memory NumPy indices"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vdb-core",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "asyncpg>=0.30.0",
    "numpy>=1.26.0",
    "pydantic>=2.10.4",
    "pika>=1.3.2",
]

[tool.uv.sources]
vdb-core = { path = "../../packages/core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search_service"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
