[project]
name = "vdb-worker"
version = "0.1.0"
description = "Temporal worker for VectorDB operations (ingestion + search)"
requires-python = ">=3.12"
dependencies = [
    "vdb-core",
    "temporalio>=1.6.0",
    "asyncpg>=0.29.0",
    "pika>=1.3.0",
    "sqlalchemy>=2.0.0",
]

[tool.uv.sources]
vdb-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vdb_worker"]
